--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.8.3",
     "less": "^3.13.1",
     "less-loader": "^5.0.0",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-router": "^3.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -33,7 +34,8 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "@babel/eslint-parser",
+      "requireConfigFile": false
     },
     "rules": {}
   },
